@@ -100,7 +100,8 @@ Version 2.3.0 - The river knows.
 		* Implement directory preferences in remote gui
 		* MSVC build for wxCas
 		* Fixed errors and crashes on parsing ED2K links with '/' in them
-		* configure option --enable-fileview
+		* Configure option --enable-fileview
+		* Bypass amulegui connection dialog with switch -s / --skip
 
 	Vollstrecker:
 		* Unify copyright lines
